Othermos version mobile (mini bug visuel à résoudre)

--- a/CSS/aPropos_style.css
+++ b/CSS/aPropos_style.css
@@ -69,12 +69,13 @@ a {
     padding: 5px 10px;
     border: none;
     height: auto;
-    width: 90px;
+    width: auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
     cursor: pointer;
     transition: .4s;
+    display: none;
 
 }
 
@@ -95,6 +96,71 @@ a {
     color: #0000BA;
     margin-right: 19px;
 
+}
+
+.sidebar_block {
+    width: 100%;
+    height: 115px;
+    background-color: #6002EE;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.sidebar_block:first-child {
+    font-family: 'Work Sans', sans-serif;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+}
+
+.header_nav_link_phone {
+    margin-right: 20px;
+    text-decoration: none;
+    text-align: center;
+    height: 30px;
+    margin-bottom: 20px;
+    color: #6002EE;
+    font-family: 'Work Sans', sans-serif;
+    transition: 0.5s;
+}
+
+.this_page {
+    font-weight: bold;
+    color: #0000BA;
+}
+
+/*_-_-_-_-_-_SIDEBAR_-_-_-_-_-_*/
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    transition: .5s ease-out;
+
+
+}
+
+#sidebar {
+    z-index: 20;
+    position: fixed;
+    background-color: white;
+    height: 100%;
+    width: 50%;
+    top: 0;
+    right: 0;
+    transition: .5s;
+    display: flex;
+    flex-direction: column;
+}
+
+.none {
+    transform: translateX(100%);
+    opacity: 0;
 }
 
 /*_-_-_-_-_-_PROPOS_-_-_-_-_-_*/
@@ -152,6 +218,9 @@ a {
     background-color: white;
     color: #6002EE;
 }
+#propos_responsive{
+    display: none;
+}
 
 /*_-_-_-_-_-_FOOTER_-_-_-_-_-_*/
 .footer {
@@ -195,4 +264,73 @@ a {
     color: #9C47FF;
     margin-right: 19px;
 
+}
+
+/*_-_-_-_-_-_MEDIA QUERIES MOBILE_-_-_-_-_-_*/
+
+@media screen and (max-width: 1220px){
+    
+    #propos_desktop{
+        display: none;
+    }
+    #propos_responsive{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .propos_img_pk{
+        margin: 50px 0;
+    }
+    .propos_img_qui{
+        margin: 50px 0;
+    }
+    .propos_title{
+        text-align: center;
+    }
+    .propos_grp{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .burger_btn {
+        height: 41.5px;
+        width: 30px;
+    }
+    .header_nav {
+        display: none;
+    }
+
+    .header_nav_panier {
+        display: block;
+    }
+
+    .footer_title{
+        display: none;
+    }
+
+    .footer {
+        justify-content: center;
+    }
+
+}
+
+@media screen and (max-width: 620px){
+    .propos_img_pk{
+        margin: 50px 0;
+        width: 100%;
+        height: 100%;
+    }
+    .propos_img_qui{
+        margin: 50px 0;
+        width: 100%;
+        height: 100%;
+    }
+    .propos_title{
+        font-size: 38px;
+    }
 }
