--- a/CSS/index_style.css
+++ b/CSS/index_style.css
@@ -451,7 +451,7 @@ a {
         width: 150px;
         height: 50px;
         border-radius: 10px;
-        border: none;
+        border: solid 1px white;
         font-family: 'Work Sans', sans-serif;
         font-weight: bold;
         font-size: 20px;
