--- a/CSS/produit_style.css
+++ b/CSS/produit_style.css
@@ -69,7 +69,7 @@ a {
     padding: 5px 10px;
     border: none;
     height: auto;
-    width: 90px;
+    width: auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
